# automate_ci_cd

./: Makefile  db.sqlite3  pyproject.toml
.github/workflows/: django.yml
basic_django/: settings.py  urls.py
core/: tests.py  views.py
